--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body, html{
 .section{
     text-align: center;
     padding: 50px 80px;
+    
 }
 
 .section-dark{
@@ -46,6 +47,15 @@ body, html{
     color: #ddd
 }
 
+ol{
+    display:inline-block;
+    text-align: left;
+}
+
+.charts{
+    max-width: 100%;
+    height: auto;
+}
 .ptext{
     position: absolute;
     width: 100%;
@@ -126,6 +136,11 @@ a[id="nav4"]:target ~ #section.section-dark {
     transformL translateY(_0px_);
 }
 
+div.tableauPlaceholder{
+    margin-left : auto;
+    margin-right: auto;
+
+}
 /*Mobile Device Detection*/
 @media(max-width:568px){
     .pimg1, .pimg2, .pimg3{
