--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ body, html{
     color: #666;
 
 }
+
+a:link{
+    color: white;
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
+    text-decoration: none;
+}
+
 .pimg1, .pimg2, .pimg3{
     position: relative;
     opacity: 0.70;
